# scrna_longformer

./: .gitignore  AIMS_ACHIEVEMENT_AUDIT.md  CHANGELOG.md  DEVELOPMENT_LOG.md  ENVIRONMENT_AUDIT.md  EVALUATION_FRAMEWORK.md  FIXES_DOCUMENTATION.md  FUTURE_DIRECTIONS.md  LESSONS_LEARNED.md  MILESTONE_SUMMARY.md  PROJECT_ACHIEVEMENT.md  README.md  RELEASE.md  RESUME.md  TECHNICAL_DETAILS.md  pyproject.toml  requirements.txt  run_with_env.sh  setup.py  setup_environment.sh  verify_environment.sh
.devcontainer/: devcontainer.json
.github/: CI_README.md
.github/workflows/: ci.yml  container-check.yml  full-setup.yml
configs/: cpu_fast.yaml  default.yaml  default_scaled.yaml  exp_zscore.yaml  fast_debug.yaml  improved.yaml  leiden_real.yaml  lightning_fast.yaml  real_data_fast.yaml  real_leiden_small.yaml  real_leiden_top500.yaml  tiny_model.yaml  ultra_fast.yaml  ultra_fast_real.yaml
data/: pbmc3k_labels.npy  scrna_longformer_cls.pt
docs/: DOCUMENTATION_COMPLETE.md  README.md
preparation/: Dockerfile  INSTALL.sh  README.md
results/: cv_agg.json  cv_summary.csv  model_fold1.pt  model_fold2.pt  model_fold3.pt  model_fold4.pt  model_fold5.pt
results/scaled_test/: model_fold1.pt
scripts/: baseline_comparison.py  check_requirements.py  create_diagrams.py  plot_umap.py  prepare_pbmc3k.py  run_cv.py  train_classifier.py  validate_data.py
src/scrna_longformer/: __init__.py  data.py  layers.py  model.py  utils.py
tests/: test_attention_stability.py  test_data.py  test_layers.py  test_mlm_smoke.py  test_model.py
